# utils

./: .gitignore  VaspReconvergeExample.py  chargemol.py  custom_custodian_handlers.py  develop_parse_DDEC6.ipynb  functions.py  generic.py  jobfile.py  parallel.py  periodic_table.csv  periodic_table.py  pyproject.toml  setup.py  structure_featuriser.py  training_data_nequip.py  vasp.py  vasp_resubmitter.py
GNN_calculators/: mace.py
StructureManipulator/: cleave.py
WIP_notebooks/: test_kpoints.ipynb  test_vasp_convergence_check.ipynb
actual_usage/: build_and_show_db  build_and_show_db.sh  build_potential_training_db  build_vasp_database.py  build_vasp_potential_training_db.py  compress_here  compression.py  develop_chargemol_class.ipynb  develop_new_vasp_db_generator.ipynb  memory_check  qstat_slurm  setonix_refresh_mamba  slurm_list_jobdir  summarise_db  summarise_vasp_database.py  update_failed_jobs_db  update_vasp_db.py
create_reconverge/: test_reconverge.ipynb
jobscript_templates/: CustodianContinue_SecondRelax.sh  CustodianDoubleRelaxation.sh  CustodianStatic.sh  DRS_Custodian_1.sh  DRS_Custodian_1_Garching.sh  DRS_Custodian_2_Garching.sh  DRS_Custodian_2_Setonix.sh  DRS_Custodian_Garching.sh  DRS_Custodian_Setonix.sh  SDRS_Custodian.sh  SDRS_Custodian_1.sh  SDRS_Custodian_1_Garching.sh  SDRS_Custodian_1_Setonix.sh  SDRS_Custodian_2.sh  SDRS_Custodian_2_Garching.sh  SDRS_Custodian_2_Setonix.sh  SDRS_Custodian_3.sh  SDRS_Custodian_3_Garching.sh  SDRS_Custodian_3_Setonix.sh  SDRS_Custodian_Garching.sh  SDRS_Custodian_Setonix.sh  jobfile-Garching-Static-DDEC6  (+24 more)
(+84 files in other folders)
